made the header section

--- a/index.html
+++ b/index.html
@@ -38,3 +38,27 @@
         </div>
     </nav>
 
+    
+    <header>
+        <div class="container header__container">
+            <div class="header__left">
+                <h1>Grow your skills to andvance your career path</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quisquam saepe animi, ad quis et atque iste
+                    placeat minus ipsa ren?
+                </p>
+                <a href="courses.html" class="btn btn-primary">Get
+                    Started </a>
+            </div>
+
+            <div class="header__right">
+                <div class="header__right-image">
+                    <img src="./images/header.svg">
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- end of the header section  -->
