updated the category section

--- a/index.html
+++ b/index.html
@@ -62,3 +62,109 @@
     </header>
 
     <!-- end of the header section  -->
+    
+    <!-- category section -->
+
+    <section class="categories">
+        <div class="container categories__container">
+            <div class="categories__left">
+                <h1>Categories</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatum ab in corporis quis
+                    molestiae
+                    possimus vel temporibus error. Voluptatem cum harum ipsum facilis ducimus veritatis optio, nihil qui
+                    provident.
+                </p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="categories__right">
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Blockchain</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Technical Writing</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Graphic Design </h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Finance</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Music</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-bitcoin-circle"></i></span>
+                    <h5>Business</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nisi.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <!-- END OF THE SECTION -->
+
+
+    <section class="courses">
+        <h2>Our Popular Courses</h2>
+        <div class="container courses__container">
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/webdesign.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Web Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/blockchain.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Blockchain Course</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/cloud.jpg">
+                </div>
+                <div class="course_info">
+                    <h4>Cloud Computing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+        </div>
+    </section>
+
+
