faq added by dharam

--- a/index.html
+++ b/index.html
@@ -166,5 +166,122 @@
             </article>
         </div>
     </section>
+    
+     <!-- faq stared by dsingh -->
+    <section class="faqs">
+        <h2>Frequently asked questions</h2>
+        <div class="container faqs__container">
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do i know the right course for me?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum fugiat officiis porro
+                        distinctio voluptatum quaerat accusantium ullam repellendus tenetur facere cumque amet
+                        blanditiis alias, quibusdam esse harum? Impedit, ducimus?
+                    </p>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- end of the faq section -->
 
 
