--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
         <div class="container header__container">
             <div class="header__left">
-                <h1>Grow your skills to andvance your career path</h1>
+                <h1>Grow your skills to advance your career path</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Quisquam saepe animi, ad quis et atque iste
