created ACHIEVEMENT section

--- a/about.html
+++ b/about.html
@@ -36,3 +36,47 @@
         </div>
     </nav>
     <!-- ============================ END OF NAVBAR =============================== -->
+
+    <!--+++++++++++++++++++++++++++ ACHIEVEMENTS +++++++++++++++++++++++++++-->
+    <section class="about__achievements">
+        <div class="container about__achievements-container">
+            <div class="about__achievements-left">
+                <img src="./images/about achievements.svg">
+            </div>
+
+            <div class="about__achievements-right">
+                <h1>Achievements</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore repellendus facilis tenetur
+                    perferendis rerum placeat, impedit minima dolor illo atque corporis natus necessitatibus officiis
+                    qui, tempora recusandae adipisci, iusto id.
+                </p>
+                <div class="achievements__cards">
+                    <article class="achievement__card">
+                        <span class="achievement__icon">
+                            <i class="uil uil-video"></i>
+                        </span>
+                        <h3>450+</h3>
+                        <p>Courses</p>
+                    </article>
+
+                    <article class="achievement__card">
+                        <span class="achievement__icon">
+                            <i class="uil uil-users-alt"></i>
+                        </span>
+                        <h3>79,000+</h3>
+                        <p>Students</p>
+                    </article>
+
+                    <article class="achievement__card">
+                        <span class="achievement__icon">
+                            <i class="uil uil-trophy"></i>
+                        </span>
+                        <h3>26+</h3>
+                        <p>Awards</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--=========================== END OF ACHIEVEMENTS ===========================-->
