--- a/about.html
+++ b/about.html
@@ -80,3 +80,69 @@
         </div>
     </section>
     <!--=========================== END OF ACHIEVEMENTS ===========================-->
+
+    <!--+++++++++++++++++++++++ TEAM ++++++++++++++++++++++++-->
+    <section class="team">
+        <h2>Meet Our Team</h2>
+        <div class="container team__container">
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm1.jpg">
+                </div>
+                <div class="team__member-info">
+                    <h4>Ayush Vardhan</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm2.jpg">
+                </div>
+                <div class="team__member-info">
+                    <h4>Devyani Pathak</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm4.jpg">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dharmendra</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm6.jpg">
+                </div>
+                <div class="team__member-info">
+                    <h4>Yugam</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+
+        </div>
+    </section>
+    <!--======================= END OF TEAM =======================-->
