--- a/courses.html
+++ b/courses.html
@@ -40,3 +40,54 @@
         </div>
     </nav>
     <!-- end of the navbar section -->
+
+    
+    <!-- =============== COURSES ================ -->
+    <section class="courses">
+        <h2>Our Popular Courses</h2>
+        <div class="container courses__container">
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/webdesign.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Web Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/blockchain.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Blockchain Course</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="./images/cloud.jpg">
+                </div>
+                <div class="course_info">
+                    <h4>Cloud Computing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperian
+                        deserunt eaque quos iure ad debitis.
+                    </p>
+                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+        </div>
+    </section>
+    <!-- =============== END OF COURSES ================ -->
