--- a/contact.html
+++ b/contact.html
@@ -35,3 +35,52 @@
         </div>
     </nav>
     <!-- ============================ END OF NAVBAR =============================== -->
+
+        
+    <!-- +++++++++++++++ CONTACT ++++++++++++++ -->
+    <section class="contact">
+        <div class="container contact__container">
+            <aside class="contact__aside">    
+                <div class="aside__image">
+                    <img src="./images/contact.svg">
+                </div>
+                <h2>Contact Us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi corrupti ea, mollitia non laudantium quos omnis sequi deserunt fuga aspernatur!
+                </p>
+                <ul class="contact__detals">
+                    <li>
+                        <i class="uil uil-phone-times"></i>
+                        <h5>+91123456789</h5>
+                    </li>
+                    <li>
+                        <i class="uil uil-envelope"></i>
+                        <h5>dharam@gmail.com</h5>
+                    </li>
+                    <li>
+                        <i class="uil uil-location-point"></i>
+                        <h5>MNNIT, Prayagraj</h5>
+                    </li>
+                </ul>
+                <ul class="contact__socials">
+                    <li> <a href="https://facebook.com"><i class="uil uil-facebook-f"></i></a></li>
+                    <li> <a href="https://instagram.com"><i class="uil uil-instagram"></i></a></li>
+                    <li> <a href="https://twitter.com"><i class="uil uil-twitter"></i></a></li>
+                    <li> <a href="https://linkedin.com"><i class="uil uil-linkedin-alt"></i></a></li>
+                </ul>
+            </aside>
+
+            <form class="contact__form">
+                <div class="form__name">
+                    <input type="text" name="First Name" placeholder="First Name" required>
+                    <input type="text" name="Last Name" placeholder="Last Name" required>
+                </div>
+                <input type="email" name="Email Address" placeholder="Your Email Address" required>
+                <textarea name="Message" rows="7" placeholder="Message" required></textarea>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
+        </div>
+    </section>
+    <!-- ====================== END OF CONTACT ==================== -->
+
+    
