--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                 </ul>
             </aside>
 
-            <form class="contact__form">
+            <form action="https://formspree.io/f/mlekwejk" method="POST" class="contact__form">
                 <div class="form__name">
                     <input type="text" name="First Name" placeholder="First Name" required>
                     <input type="text" name="Last Name" placeholder="Last Name" required>
