Update the header section

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             <div class="header__left">
                 <h1>Grow your skills to advance your career path</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Quisquam saepe animi, ad quis et atque iste
-                    placeat minus ipsa ren?
+                    Our courses are designed to provide you with the practical knowledge and experience necessary to excel in the tech
+                    industry. We offer a variety of courses that cover a wide range of topics, from programming languages to web development, data science, and more.
+                    Our instructors are experienced professionals who are passionate about sharing their knowledge and helping students succeed.
+
                 </p>
                 <a href="courses.html" class="btn btn-primary">Get
                     Started </a>
@@ -70,10 +71,8 @@
             <div class="categories__left">
                 <h1>Categories</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatum ab in corporis quis
-                    molestiae
-                    possimus vel temporibus error. Voluptatem cum harum ipsum facilis ducimus veritatis optio, nihil qui
-                    provident.
+                    We provide the different types of courses such as the Blockchain development , Graphic Designer , Finance, Music , Technical Writing , Business
+                    and much more .
                 </p>
                 <a href="#" class="btn">Learn More</a>
             </div>
